# car-match

./: .dockerignore  .env.example  .env.prod  .gitignore  AI_IMPLEMENTATION_SUMMARY.md  Dockerfile.api  Dockerfile.web  IMPLEMENTATION_ROADMAP.md  README.md  ai-sales-agent-optimization-plan.md  carmatch-prd.md  docker-compose.yml  fly.toml  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json
.vercel/: project.json
backend/: __init__.py  main.py  pyproject.toml
backend/qwen_voice_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: voice-studio.tsx
prompt/: carmatch-ai-assistant-system-prompt.txt
prompt/en/: carmatch-ai-assistant-system-prompt.txt
prompt/vi/: carmatch-ai-assistant-system-prompt.txt
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src/components/: AppShell.tsx  GlobalChatWidget.tsx  InlineSelectionAssistant.tsx  InteractiveSpecItem.tsx  VehicleImage.tsx  VoiceModeOverlay.css  VoiceModeOverlay.tsx
src/context/: CompareContext.tsx  LanguageContext.tsx  ProfileContext.tsx
src/data/: showrooms.ts  vehicles.ts  wizardSteps.ts
src/layouts/: MainLayout.tsx
src/lib/: adminConfig.ts  aiAssistant.test.ts  aiAssistant.ts  analytics.ts  assistantActions.test.ts  assistantActions.ts  assistantPolicy.test.ts  assistantPolicy.ts  brand.ts  journeySession.test.ts  journeySession.ts  leads.ts  localizedVehicle.ts  merchantGuardrails.ts  negotiationStrategy.test.ts  negotiationStrategy.ts  profileNarrative.ts  (+7 more)
(+19 files in other folders)
