[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen-voice-api"
version = "0.1.0"
description = "FastAPI backend for the Qwen voice chat app"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.28.0,<0.29.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "python-multipart>=0.0.20,<0.0.21",
  "uvicorn>=0.34.0,<0.35.0",
  "websockets>=15.0.1,<16.0.0"
]
